2009-08-06  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneProject.cs: Better handling of output paths when
	  creating configurations.

2009-08-06  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneProjectConfiguration.cs: Override and implement
	  CopyFrom. Should allow the config editing panel to store
	  values.

2009-08-06  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Quote filenames passed to ibtool.

2009-08-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneOptionsPanel.cs: Fix the assignment of values
	  between GUI and project properties.

	* IPhoneProject.cs: Fix typo in serialized property name.

	* gtk-gui/gui.stetic:
	* gtk-gui/MonoDevelop.IPhone.Gui.IPhoneOptionsPanelWidget.cs:
	  Updated.

2009-08-05  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneCommands.cs: If no project is selected, deploy to the
	  startup project.

2009-08-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Keychain.cs: Fix NRE when not using custom keys.

2009-08-04  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneSigningKeyPanel.cs: Only remove value if it exists
	  in userprefs.

2009-08-04  Michael Hutchinson  <mhutchinson@novell.com>

	* Icons:
	* Icons/iPhone.svgz:
	* Icons/iphone-22.png:
	* Icons/iphone-16.png:
	* Icons/iphone-32.png:
	* Icons/iPhone-22.svgz:
	* MonoDevelop.IPhone.csproj:
	* MonoDevelop.IPhone.addin.xml:
	* Templates/IPhoneProject.xpt.xml:
	* Icons/iphone-project-overlay.png:
	* Templates/IPhoneProjectEmpty.xpt.xml: Add icons.

2009-08-04  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Don't overwrite keys that are
	  already in the plist template.

2009-08-04  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneProject.cs:
	* gtk-gui/gui.stetic:
	* IPhoneBuildExtension.cs:
	* Gui/IPhoneOptionsPanel.cs:
	* gtk-gui/MonoDevelop.IPhone.Gui.IPhoneOptionsPanelWidget.cs:
	  Add options for display name and bundle identifier.
